invoice fixed arabic problem